--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "1d92d75d-b701-4951-87c7-115f66cb7e94"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
