--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.6",
+    "@angular/cdk": "^11.2.10",
     "@angular/common": "~11.2.6",
     "@angular/compiler": "~11.2.6",
     "@angular/core": "~11.2.6",
     "@angular/forms": "~11.2.6",
+    "@angular/material": "^11.2.10",
     "@angular/platform-browser": "~11.2.6",
     "@angular/platform-browser-dynamic": "~11.2.6",
     "@angular/router": "~11.2.6",
-    "angularx-social-login": "^3.5.5",
-    "bootstrap": "^4.6.0",
     "@google-pay/button-angular": "^2.3.0",
     "@google-pay/button-element": "^2.3.0",
+    "angularx-social-login": "^3.5.5",
+    "bootstrap": "^4.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
