add calendar confirmation dialog

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@google-pay/button-element": "^2.3.0",
     "angularx-social-login": "^3.5.5",
     "bootstrap": "^4.6.0",
+    "googleapis": "^73.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
