--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~11.2.6",
     "@angular/cdk": "^11.2.10",
     "@angular/common": "~11.2.6",
@@ -23,6 +24,7 @@
     "@angular/router": "~11.2.6",
     "@google-pay/button-angular": "^2.3.0",
     "@google-pay/button-element": "^2.3.0",
+    "agm-direction": "^0.8.9",
     "angularx-social-login": "^3.5.5",
     "bootstrap": "^4.6.0",
     "googleapis": "^73.0.0",
@@ -34,6 +36,7 @@
     "@angular-devkit/build-angular": "~0.1102.5",
     "@angular/cli": "~11.2.5",
     "@angular/compiler-cli": "~11.2.6",
+    "@types/googlemaps": "3.39.12",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
